--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,7 +16,7 @@ Every Thrifty NFT carries two distinct layers of data, revolutionizing how we de
   <Card icon="🌐" title="Public Metadata" href="/public-vs-private">
     **Visible to Everyone.** <br/> Includes the cover art, title, and public description. Acts as the "packaging" for your digital asset.
   </Card>
-  <Card icon="🫣" title="Private Metadata" href="/privacy-dilemma">
+  <Card icon="🔒" title="Private Metadata" href="/privacy-dilemma">
     **Owner-Only Access.** <br/> Encrypted content (E-books, Music, 4K Video) stored on IPFS. Uses military-grade encryption access control.
   </Card>
 </Cards>
